# EE3D11_COA

./: .gitignore  README.md  modelsim.ini  transcript  vsim.wlf
1_Performance_Analyzer/: Makefile  README.md  app  computer.cpp  computer.h  main.cpp  program  program.cpp  program.h  readme.md
2_Instruction_set_simulator/: CMakeLists.txt  README.md
2_Instruction_set_simulator/Codeblocks/2_Instruction_set_simulator/: 2_Instruction_set_simulator.cbp  2_Instruction_set_simulator.depend  2_Instruction_set_simulator.layout
2_Instruction_set_simulator/include/: instruction.h  program.h  registers.h  simulator.h
2_Instruction_set_simulator/iss/: registers.cpp  registers.h
2_Instruction_set_simulator/src/: registers.cpp
2_Instruction_set_simulator/src2_1/: 2_1.cpp  CMakeLists.txt  registers.cpp
2_Instruction_set_simulator/src2_2/: 2_2.cpp  CMakeLists.txt  registers.cpp
2_Instruction_set_simulator/src2_3/: CMakeLists.txt  registers.cpp
3_MIPS_Assembly/Example/: example_powers.s
3_MIPS_Assembly/cpp code/: insertion_sort.cpp
3_MIPS_Assembly/src/: binarySearch_test.asm  insert_test.asm  insertionSort_test.asm  main.asm
4_VHDL_MIPS/: README.md  test_3.s  transcript  vsim.wlf
4_VHDL_MIPS/vhdl_mips/: alu.vhdl  control.vhdl  jump.vhdl  mips.vhdl
4_VHDL_MIPS/work/: _info  _lib.qdb  _lib1_12.qdb  _lib1_12.qtl  _lib1_13.qdb  _lib1_13.qpg  _lib1_13.qtl  _lib1_8.qdb  _lib1_8.qtl  _lib1_9.qdb  _lib1_9.qpg  _lib1_9.qtl  _opt__lock
4_VHDL_MIPS/work/@_opt/: _lib.qdb  _lib1_0.qdb  _lib1_0.qpg  _lib1_0.qtl  _lib2_0.qdb  _lib2_0.qpg  _lib2_0.qtl  _lib3_0.qdb  _lib3_0.qpg  (+10 more)
